# CoT_official

./: .coverage  CHAIN_OF_THOUGHT.md  CHANGELOG.md  CLAUDE.md  CLI_INSTALL.md  CONTRIBUTING (Copy).md  CONTRIBUTING.md  COT_DEEP_FIXES_REPORT.md  COT_FIXES_REPORT.md  COT_INTEROPERABILITY.md  COT_LEGACY_FALLBACK_PROMPT.md  COT_PRECISE_FIXES_REPORT.md  COT_RUNTIME_CONTRACT.json  COT_SELECTION_GUIDE.md  COT_STANDARD_AUTHORITY.md  CoT_REASONING_ENVELOPE.md  FEEDBACK.md  IMPROVEMENTS_REFACTOR.md  RFC-001_CoT_Applicability.md  RFC-002_Recursive_Reasoning.md  TASK.md  TASK_template.md  USER_MANUAL.md  USER_MANUAL_SHORT.md  USE_CASES.md  __init__.py  chain_of_thought.bundle.json  chain_of_thought.bundle.json.sig  cot-committee.pubkey  cot-version-check.sh  cot_validate_wrapper.py  cot_validator.py  cot_version_check.py  integration_demo.py  key-registry.json  output.json  ptool_test.py  pyproject.toml  quickpush.sh  registry.json  (+3 more)
.claude/: settings.json
ASSUMPTION/: ASSUMPTION_DEFINITION.md  ASSUMPTION_SCHEMA.json  README.md  assumption_model.py  assumption_reasoning_example.py
CLAIM/: CLAIM_DEFINITION.md  CLAIM_SCHEMA.json  README.md  claim_model.py  claim_reasoning_example.py
CoT_official.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
FACT/: FACT_DEFINITION.md  FACT_SCHEMA.json  README.md  fact_model.py  fact_reasoning_example.py
cot-semantic-enhancer/: README.md  pyproject.toml  setup.py
cot-semantic-enhancer/src/cot_semantic_enhancer/: __init__.py
cot-semantic-enhancer/src/cot_semantic_enhancer/core/: __init__.py  embedding_provider.py  semantic_engine.py  vector_store.py
cot-semantic-enhancer/src/cot_semantic_enhancer/document_processing/: __init__.py  models.py
examples/: example_llm_output.md  golden_output_trace.md  langchain_integration.py
python-template-generator/: PATH_TOOL_REFACTOR_PLAN.md  SUMMARY_20250809_044530.md
python-template-generator/PRPs/: PRP_TEMPLATE_with_PTOOL.md  cot_semantic_enhancement_PRP.md  ptool_integration_standard_PRP.md  semantic_enhancement_INITIAL.md
python-template-generator/loaders/: .coverage  .gitignore  API_REFERENCE.md  ARCHITECTURE.md  CHAIN_OF_THOUGHT_LIGHT.md  ENRICHED_EXTENSION_PLAN.md  ENRICHER_DOCUMENTATION.md  FINALIZING_PLAN.md  PTOOL_ENRICHER_TEST_RESULTS.md  PTOOL_INTEGRATION.md  PTOOL_INTEGRATION_PLAN.md  PTOOL_MIGRATION_SUMMARY.md  PTOOL_VALIDATOR_INJECTION_PROPOSAL.md  PYTHON_SCRIPT_RUNNING_INSTRUCTIONS.md  QUICKSTART.md  README.md  REORGANIZATION_PLAN.md  chunker_test_results.json  context_fixed_enricher.py  context_fixed_results.json  demo_ptool_integration.py  embeddings_test_results.json  enhanced_enricher_with_examples.py  enricher_showcase.py  enricher_showcase_results.json  enricher_test.py  full_enhanced_enricher.py  full_enricher_results.json  generate_paths.py  generate_paths_simple.py  loaders_ptool_validators.py  loaders_validators.py  markdown_base_validator.py  markdown_pydantic_model.py  markdown_validator_enricher.py  minimal_enhanced_enricher.py  paths.py  paths_with_validation.py  project_paths.py  rag_adapters.py  (+14 more)
python-template-generator/loaders/TEST_RUN_RESULTS/: SUMMARY_REPORT.md  query_results.md  test_results.json
python-template-generator/loaders/TEST_RUN_RESULTS_AFTER_REORG/: SUMMARY_REPORT.md  query_results.md
python-template-generator/loaders/TRASH/: example_enhanced_output.json  minimal_enhanced_output.json  test_chunker_debug.py  test_chunker_fix.py  test_chunker_fixed.py  test_chunker_minimal.py  test_import_only.py  test_section_properties.py  test_section_str.py  test_simple.py  test_split.py  test_token_counter.py
python-template-generator/loaders/chunker/: __init__.py  base_chunker.py  models.py  semantic_chunker.py  token_counter.py
python-template-generator/loaders/core/: __init__.py  adapters.py  models.py  pipeline.py
python-template-generator/loaders/docs/adr/: ADR_template.md
python-template-generator/loaders/docs/architecture/: README.md
python-template-generator/loaders/docs/automation/: dependency_update_script.py
python-template-generator/loaders/embeddings/: __init__.py  base_provider.py  models.py  sentence_transformer_provider.py
python-template-generator/loaders/enrichers/: __init__.py  context_fixed.py  enhanced_with_examples.py  full_enhanced.py  markdown_validator.py  minimal_enhanced.py
python-template-generator/loaders/planning/: DOCUMENTS.md  PLANNING.md  PLANNING_OLD.md  PLANNING_template.md  TASK.md  TASK_COMPLETION_MINIMAL.md  TASK_COMPLETION_TEMPLATE.md  TASK_template.md  TRAVEL_PLAN.md
python-template-generator/loaders/scripts/: auto_migrate_to_ptool.py  demo_ptool_usage.py  enricher_showcase.py  enricher_test.py  migrate_to_ptool.py  test_rag_on_markdown.py
python-template-generator/loaders/tests/: FINAL_TEST_REPORT.md  README.md  TEST_SUMMARY.md  __init__.py  conftest.py  conftest_old.py  conftest_ptool.py  pytest.ini  run_tests.py  test_import_updates.py  test_imports_and_structure.py
python-template-generator/loaders/utils/: __init__.py  sluggify.py
python-template-generator/loaders/validators/: __init__.py  base_validator.py  path_validators.py
python-template-generator/loaders/vector_store/: __init__.py  base_store.py  faiss_store.py  models.py
src/project_paths/: project_paths_static.py
test_integration/: run_tests.sh  test_golden_output.py  test_langchain_adapter.py  test_split_trace_merge.py  test_version_check_remote.py
test_integration/snapshots/: trace_snapshot_example.json
test_suite/: README.md
test_suite/edge_cases/: 001_large_trace.json  001_large_trace.md  002_legacy_format.json  002_legacy_format.md  003_trace_degraded_summary.json  003_trace_degraded_summary.md  004_split_trace_fallback.md
test_suite/invalid/: 001_missing_timestamp.json  001_missing_timestamp.md  002_recursion_limit_exceeded.json  002_recursion_limit_exceeded.md  003_recursion_limit_exceeded_live.md
test_suite/valid/: 001_basic_reasoning.json  001_basic_reasoning.md  002_recursive_reasoning.json  002_recursive_reasoning.md  003_token_limit_fallback.json  003_token_limit_fallback.md
(+23 files in other folders)
