[project]
version = "0.1.0"
name = "CoT-official"
description = "Ultimate standard for Chain of thought"
readme = "README.md"
requires-python = ">=3.12"

dependencies = [
    "click",
    "pydantic",
    "rapidfuzz",
    "sentence-transformers",
    "scikit-learn",
    "typing-extensions",
    "types-pyyaml>=6.0.12.20250516",
    "pyyaml>=6.0.2",
    "markdown-it-py>=3.0.0",
    "tiktoken>=0.10.0",
    "faiss-cpu>=1.11.0.post1",
    "python-dotenv>=1.1.1",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-cov",
    "pytest-asyncio",
    "pytest-mock",
    "mypy",
    "ruff",
    "black",
    "bandit",
    "safety",
    "mkdocs",
    "mkdocs-material",
    "mkdocstrings[python]",
    "nox",
    "vulture",
    "pipreqs",
]

[tool.pytest.ini_options]
minversion = "7.0"
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
addopts = [
    "--strict-markers",
    "--cov=src/docpipe",
    "--cov-report=term-missing",
    "--cov-report=html",
    "--cov-fail-under=0",  # Start at 0, will increase as we add tests
]

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true

[[tool.mypy.overrides]]
module = "sentence_transformers.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "rapidfuzz.*"
ignore_missing_imports = true

[tool.ruff]
target-version = "py312"
line-length = 100
fix = true

[tool.ruff.lint]
select = ["E", "W", "F", "I", "C", "B", "UP", "S", "A", "DTZ", "ICN", "PIE", "PT", "RET", "SIM", "TID", "TCH", "ARG", "PTH", "PL"]
ignore = ["E501", "PLR0913"]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S101", "ARG", "PLR2004"]

[tool.ruff.lint.isort]
known-first-party = ["docpipe"]

[tool.black]
line-length = 100
target-version = ["py312"]
include = '\.pyi?$'

[tool.coverage.run]
source = ["docpipe"]
omit = [
    "tests/*",
    "*/migrations/*",
    "*/__pycache__/*",
    "*/venv/*",
    "*/virtualenv/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self.debug:",
    "if __name__ == .__main__.:",
    "raise AssertionError",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
]

[tool.bandit]
exclude_dirs = ["tests", "docs"]
skips = ["B101"]

[tool.vulture]
exclude = ["*/test_*.py", "tests/"]
min_confidence = 60
ignore_names = ["model_config", "metadata", "field_validator"]

[dependency-groups]
dev = [
    "pytest>=8.4.1",
    "pytest-cov>=6.2.1",
    "pytest-mock>=3.14.1",
]

[tool.project_paths.paths]
# Base directories
base_dir = "."
loaders_dir = "python-template-generator/loaders"

# Core module paths
loaders_core = "python-template-generator/loaders/core"
loaders_enrichers = "python-template-generator/loaders/enrichers"
loaders_validators = "python-template-generator/loaders/validators"
loaders_utils = "python-template-generator/loaders/utils"
loaders_scripts = "python-template-generator/loaders/scripts"

# Sub-modules
loaders_chunker = "python-template-generator/loaders/chunker"
loaders_embeddings = "python-template-generator/loaders/embeddings"
loaders_vector_store = "python-template-generator/loaders/vector_store"

# Test directories
loaders_tests = "python-template-generator/loaders/tests"
loaders_test_fixtures = "python-template-generator/loaders/tests/fixtures"
loaders_test_integration = "python-template-generator/loaders/tests/integration"
loaders_test_unit = "python-template-generator/loaders/tests/unit"

# Test output
loaders_test_results = "python-template-generator/loaders/TEST_RUN_RESULTS"
loaders_test_results_after = "python-template-generator/loaders/TEST_RUN_RESULTS_AFTER_REORG"
loaders_test_artifacts = "python-template-generator/loaders/test_artifacts"
loaders_htmlcov = "python-template-generator/loaders/htmlcov"

# Documentation
loaders_docs = "python-template-generator/loaders/docs"
loaders_docs_adr = "python-template-generator/loaders/docs/adr"
loaders_docs_architecture = "python-template-generator/loaders/docs/architecture"
loaders_docs_automation = "python-template-generator/loaders/docs/automation"

# Other
loaders_trash = "python-template-generator/loaders/TRASH"
loaders_planning = "python-template-generator/loaders/planning"

[tool.project_paths.files]
# Test configuration files
loaders_pytest_ini = "python-template-generator/loaders/tests/pytest.ini"
loaders_conftest = "python-template-generator/loaders/tests/conftest.py"

# Main module files
loaders_paths_module = "python-template-generator/loaders/paths.py"

# Script files
loaders_run_tests = "python-template-generator/loaders/tests/run_tests.py"
[tool.uv.sources]
path-tool = { path = "../EMBEDDED/PACKAGES/PTOOL", editable = true }
